Fixes a number of smaller issues to addres serving at /embed subdirectory

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <% preact.headEnd %>
     
     <!-- start Google Analytics -->
-    <script async src="/assets/scripts/gtag.js?id=UA-120325397-2"></script>
+    <script async src="/embed/assets/scripts/gtag.js?id=UA-120325397-2"></script>
     <script>
       try {
         window.dataLayer = window.dataLayer || [];
