supress conslole erros in prod

--- a/src/template.html
+++ b/src/template.html
@@ -21,9 +21,7 @@
         }
         gtag('js', new Date())
         gtag('config', 'UA-120325397-2')
-      } catch (e) {
-        console.error(e)
-      }
+      } catch (e) {}
     </script>
     <!-- end Google Analytics -->
 
